# mdview

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json
docs/: README.md  design.md  rendering.md  roadmap.md  tech-stack.md
frontend/: app.js  index.html  style.css
scripts/: copy-vendor.mjs  gen-icon.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: probe.rs
src-tauri/icons/: icon.icns
src-tauri/src/: assets.rs  config.rs  lib.rs  main.rs  render.rs  watch.rs
